@@ -711,7 +711,8 @@
     - disabled "test_frontend" and executable existence check when "no_execution" is set to "1"
     - fixed compilation of non-debug build with NO_ASSERT
     - avoided some strlen() usage
-    - replaced some exit() calls with return
+    - replaced some ext() calls with return
+    - added CMake option "USE_SANITIZERS" to enable AddressSanitizer/UndefinedBehaviorSanitizer if supported
 
     create_report
     - fixed some clang-tidy warnings
